# ht_schemas

./: README.md  main.py  pyproject.toml
full_text/: clickdata_model.json  facets_model.json  full_text_item_model.json
full_text_json/: fulltext_facets.json  fulltext_interface.json  fulltext_item.json
fulltext_json/: all_facets.json  clickdata.json  output_interface.json
fulltext_schemas/: all_facets.json  clickdata.json  each_document.json  facets.json  facets_schema.json  fulltext_facets_schema.json  fulltext_interface_schema.json  fulltext_item_schema.json  output_interface.json
ls_model/: item_level_model.csv
